--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-router": "^1.20.0",
+    "@tanstack/router": "^0.0.1-beta.53",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
